feat(nop-lint): plan 08——热路径分配治理(抑制尾regionMatches零分配/NodeExactEquality 4→2+64层防护/KindIndex int[]无装箱/multiCaptures单次快照/sha256 HexFormat+原型clone),大语料JMH基建(9基准),站点判定-47.6%/-97.2%/-18.8%,独立audit R1 REJECTED→R2后通过,测试+17至772绿,perf-baseline+design04增注